Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2855

error management in KUC broadcast delivery

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.4.0
    • Lustre 2.4.0
    • 3
    • 6917

      in KUC broadcast groups, the message delivery fails if a userland process terminates without closing its kuc channel properly.
      This patch improves the behavior of KUC broadcast groups, to make it more adapted for HSM usage:
      the message delivery is successful if at least 1 userland process is present in this group and receives the message successfully.
      Only HSM copytools use KUC broadcast groups (no impact on changelog processing).

            keith Keith Mannthey (Inactive)
            cealustre CEA
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: